# falcon

./: .gitignore  CHARTER.md  LICENSE  LSP.md  README.md  coc-settings.json  lspconfig.lua  parser_fix.txt  pyproject.toml  repl_test.fn  requirements.txt  simple_pattern.fn  test_case_fix.fn  test_pattern.fn  test_simple_match.fn  vscode-syntax.json
.claude/: settings.local.json
.windsurf/rules/: edit-gitignore-with-cascade.md
examples/: async_stub.fn  async_stub.vyom  closure.fn  closure.vyom  collections.fn  collections.vyom  control_flow.fn  control_flow.vyom  easy_custom.fn  error_handling.fn  error_handling.vyom  factorial.fn  functions.fn  functions.vyom  hello.fn  hello.vyom  loop.fn  loop.vyom  match_guards.fn  operators.fn  operators.vyom  pattern_matching.fn  pattern_matching.vyom  type_annotations.fn  type_annotations.vyom  variables.fn  variables.vyom
installer/: falcon.iss  vyom.iss
scripts/: build_exe.ps1  build_setup.ps1
src/examples/: async_stub.fn
src/falcon/: __init__.py  ast_nodes.py  builtins.py  compiler.py  env.py  interpreter.py  lexer.py  main.py  parser.py  precedence.py  repl.py  runner.py  tokens.py  type_checker.py  vm.py
src/tests/: __init__.py  test_error_handling.py  test_examples.py  test_interpreter.py  test_lexer.py  test_lsp.py  test_parser.py  test_pattern_match.py  test_pattern_matching.py  test_type_annotations.py  test_vm_interpreter_parity.py
src/utils/: __init__.py  errors.py  file_loader.py  (+1 more)
tools/: debug_parse.py  debug_tokens.py  debug_tokens_exact.py  falcon_cli.py  inspect_lexer.py  run_example.py  vyom_cli.py
(+33 files in other folders)
